🧪 Add tests for TabCompleteUtil.filterStartsWith
Added JUnit 5 dependencies to `pom.xml` to enable unit testing.
Created a new test class `TabCompleteUtilTest` to cover standard matches,
case-insensitivity, no match, empty options, empty prefix, and exact
matches for the `filterStartsWith` method.